--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,8 +1,3 @@
 <%-include header%>
-<form method="post">
-    标题<br />
-    <input type="text" class="form-control" name="title"><br />
-    <textarea name="post" cols="100" rows="20"></textarea><br/>
-    <input type="submit" class="btn btn-default" value="发表">
-</form>
+<%-include upload.ejs%>
 <%-include footer%>
